# python-advanced-topics

./: .Jenkinsfile  .gitignore  .pre-commit-config.yaml  .style.yapf  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  monorepo_init.py  monorepo_setup.py  pyproject.toml
.circleci/: config.yml  pyproject.toml
.github/workflows/: build.yml  general.yml
O_O_P/: Database.py  Users.py  oop_deep_dive_101.py  oop_deep_dive_102.py  oop_deep_dive_103.py  oop_deep_dive_104.py  oop_deep_dive_105.py  oop_deep_dive_106.py  oop_deep_dive_107.py
api_practices/: fast_api_practice.py  job.py  pyproject.toml  queue_pattern.py  wikipedi_practice.py
asynchronous /: asynchronous _101.py  asyncio_blog.py  chaining_coroutines.py  pyproject.toml  random_maker.py
automate_boring_stuffs/: linkedin_automation.py
automation_with_selenium/: linkedin_automation.py  pyproject.toml
best_practices/: args_kwargs.py  argument_unpacking.py  equality_vs_identity.py  exception_classes_hierarchy.py  lbyl_eafp_prevent_or_handle_error.py  pyproject.toml  return_none.py  str_formatting.py  user_defined_exception_classes.py  variables.py  what_is_repr.py
comprehension/: dictionary_comprehension.py  generator_comprehensions.py  list_comprehension.py  pyproject.toml  set_comprehension.py
computer_vision/: face_detection.py  ocr_tesseract_101.py  pyproject.toml
crud_operations/: crud_csv.py  crud_txt.py  crud_xlsx.py  generic-food.csv
crud_operations/data_sources/: VOCABULARY.xlsx  employee_database.txt
crud_operations_on_files/: crud_txt.py  pyproject.toml
crud_operations_on_files/data_sources/: employee_database.txt  generic-food.csv
data_science/: 1_pandas_creating_reading_writing.py  2_pandas_indexing_slicing_assigning.py  3_pandas_summary_functions_maps.py  4_pandas_grouping_sorting.py  dask_101.ipynb  dask_vs_pandas.ipynb  load_data.py  pandas_101.ipynb  pyproject.toml  traffic_crashes.ipynb  turkey_inflation.ipynb  wap_pattern.py
data_science/datasets/: chase_bank.csv  farmers_markets_from_usda.csv
data_structures_algorithms/: balanced_paranthesis.py  count_stars.py  hash_101.py  heap_101.py  heapq_practices.py  linked_list_101.py  pyproject.toml  qa4_determine_sum_of_two.py  stack_101.py
data_structures_algorithms/algorithms/: searching.py  test_data.py
data_structures_algorithms/data_structures/: binary_tree_1.py  binary_tree_101.py  dfs_101.py  fibonacci_heap.py  hash_101.py  heap_101.py  heapq_practices.py  linked_list_101.py  queue_101.py  stack_1.py  stack_101.py  tree_traversals.py
data_structures_algorithms/questions/: qa1_balanced_paranthesis.py  qa2_find_missing_number.py  qa3_count_stars.py  qa4_determine_sum_of_two.py  qa5_fibonacci.py
database/: database_config.ini  mysql_connection.py  mysql_context_manager.py  postresql_connection.py  pyproject.toml
database/data_ingestion/: amazon_s3.py  aws_s3_creating_bucket.py  mysql_data_ingestion.py
debug_assert/: assert_101.py
debugging/: pyproject.toml
decorators/: decorators_2.py
decorators_101/: decorators_1.py  pyproject.toml
design_patterns/: 1_iterator_pattern.py  iterator_pattern.py  pyproject.toml
docs/: aws_s3_data_ingestion.md  projects.md  pyproject.toml  standards.md  yemeksepeti_patika_web_development_bootcamp.md
events/: pyproject.toml
events/james_powell_pydata_2017/: data_model.py  decorators.py  library.py  library1.py  library2.py  library3.py  user.py
flow_control/: drawing.py  ensure_divisible.py  kafka.py  main.py  p_sight.py  pyproject.toml  zip_practice.py
functions/: everything_is_object.py  generators_101.py  generators_102.py  generators_103.py  generators_fibonacci.py  lambda_101.py  lambda_102.py  most_common_methods.py  nested_functions.py  pyproject.toml  recursive_101.py
generators/: generator_1.py  generator_2.py  generator_3.py  generator_4.py  generator_5.py  generators_101.py  generators_102.py  legacy_iterator.py  lyrics.txt  pyproject.toml
multiprocessing/: parallelism_102.py  prime_number.py  process_101.py  pyproject.toml
multithreading/: concurrency_101.py  multithreading_ex1.py
multithreading_101/: asyncio _101.py  concurrency_101.py  multithreading_102.py  multithreading_ex1.py  multithreading_ex2.py  parallelism_101.py  pyproject.toml  threading_101.py
network/: network_101.py  network_102.py  pyproject.toml
object_internals/: vector.py
object_oriented_programming/: Database.py  Users.py  class_methods.py  dunder_methods.py  human.py  oop_deep_dive_101.py  oop_deep_dive_102.py  oop_deep_dive_103.py  oop_deep_dive_104.py  oop_deep_dive_105.py  oop_deep_dive_106.py  oop_deep_dive_107.py  person.py  pyproject.toml
parallel_computing/: pyproject.toml
projects/: chatbot_hi.py  delete_chrome_history.py  pyproject.toml
projects/file_transfer_via_tcp/: client_1.py  client_2.py  my_text2.txt  server_side.py
projects/justjoin_cost_analysis/: salaries.csv
projects/mail_sender/: mailjet_api.py  template_mail.html
projects/telegram_bot/: main.py  weather.py
projects/twitter_trends/: cron_jobs.txt  main.py  twitter_helpers.py  twitter_trends.py
regular_expressions/: pyproject.toml  regex_101.py  regex_201.py
socket_101/: socket_101.py
testing/: assert_101.py  pyproject.toml  testing_101.py  testing_102.py  testing_103.py  testing_with_pytest.py
useful_packages/: pyproject.toml  tabulate_101.py
web_scraping/: auto_mpg.html  currency_scrapper.py  hansard.html  imdb_data_mining.py  imdb_top250.py  instagram_downloader.py  luxury_estate.py  make_scraped_data_usable.ipynb  making_scraped_data_usable.ipynb  pyproject.toml  scraped_cars.csv  scraped_page_result.pickle  tcmb_currency.py  test_web_scraping_demo.py  tr_earthquake.py  twitter_trends.py  web_scraping_101.py  web_scraping_102.py  web_scraping_demo.py  wordpress.html
(+3 files in other folders)
