[tool.poetry]
name = "python_advanced_topics"
version = "0.1.0"
description = ""
authors = ["hasanozdem1r <hasanozdemir1@trakya.edu.tr>"]
packages = [{include = "api_practices"},{include = "asynchronous"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
