[tool.poetry]
name = "multiprocessing"
version = "0.1.0"
description = ""
authors = ["Hasan Ozdemir <hasanozdemir1@trakya.edu.tr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
